# ChangeLog for dev-java/spring-beans
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
  metadata.xml, spring-beans-3.2.4.ebuild:
  Install test utils if build with +test to ease the test phase of the other
  spring-* packages.

  16 Sep 2013; Johann Schmitz <ercpe@gentoo.org>
  +files/3.2.4-use-jdk-1.6-for-tests.patch, files/3.2.4-build.xml,
  spring-beans-3.2.4.ebuild:
  Make the spring-beans ebuild build and test!

  04 Sep 2013; Johann Schmitz <ercpe@gentoo.org> files/3.2.4-build.xml,
  spring-core-3.2.4.ebuild:
  Full ebuild for spring-core

*spring-core-3.2.4 (01 Sep 2013)

  01 Sep 2013; Johann Schmitz <ercpe@gentoo.org> +files/3.2.4-build.xml,
  +metadata.xml, +spring-core-3.2.4.ebuild:
  Added ebuild for spring-core - test suite not working yet, so work in progress