@@ -10,7 +10,8 @@ inherit java-pkg-2 java-ant-2
 
 DESCRIPTION="A comprehensive programming and configuration model for modern Java-based enterprise applications"
 HOMEPAGE="http://www.springsource.org/spring-framework"
-SRC_URI="https://github.com/SpringSource/spring-framework/archive/v${PV}.RELEASE.tar.gz -> spring-framework-${PV}.tar.gz"
+SRC_URI="https://github.com/SpringSource/spring-framework/archive/v${PV}.RELEASE.tar.gz -> spring-framework-${PV}.tar.gz
+		http://dev.gentoo.org/~ercpe/distfiles/dev-java/spring-framework/spring-framework-${PV}-buildscripts.tar.bz2"
 
 LICENSE="Apache-2.0"
 SLOT="3.2"
@@ -49,10 +50,6 @@ EANT_TEST_GENTOO_CLASSPATH="${EANT_GENTOO_CLASSPATH}
 	hamcrest-core-1.3
 	junit-4
 	mockito"
-
-java_prepare() {
-	cp "${FILESDIR}/${PV}-build.xml" "${S}"/${PN}/build.xml || die
-}
 
 src_install() {
 	java-pkg_dojar "${S}"/${PN}/dist/${PN}.jar
